--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,13 @@ jobs:
       
       # Sets up MATLAB on the GitHub Actions runner
       - name: Setup MATLAB
-        uses: matlab-actions/setup-matlab@v0
+        uses: matlab-actions/setup-matlab@v1
 
       # Runs a set of commands using the runners shell
-      - name: Run all tests
-        uses: matlab-actions/run-tests@v0
+      - name: Run tests and generate artifacts
+        uses: matlab-actions/run-tests@v1
         with:
-          source-folder: main
+          source-folder: tbx
+          select-by-tag: Unit
+          test-results-junit: test-results/results.xml
+          code-coverage-cobertura: test-results/coverage.xml
