added matrix of releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,21 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    # Set up the job strategy matrix to define the different job configurations.
+    matrix:
+
+      # List of platforms on which to run the tests.        
+      platform: [ ubuntu-latest ]
+  
+      # List of MATLAB releases over which to run the tests.        
+      matlab-version: [ R2023b, R2024a ]
+
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.platform }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
