--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         uses: matlab-actions/run-build@v2
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: IAMDataExplorer
           path: IAMDataExplorer.mltbx
@@ -63,7 +63,7 @@ jobs:
       # Previous here is buildtool, since upload is canceled on failure
       - name: Setup Pages
         if: success() || failure()
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
 
       # Upload test reports
       - name: Upload Artifact
@@ -96,5 +96,5 @@ jobs:
       # Publish the report address to GitHub Pages
       - name: Create Annotation with links
         run: |
-          echo '<a href="${{ steps.deployment.outputs.page_url }}/test-results/" target="_blank">Test results report</a>' >> $GITHUB_STEP_SUMMARY
-          echo '<a href="${{ steps.deployment.outputs.page_url }}/code-coverage/" target="_blank">Code coverage report</a>' >> $GITHUB_STEP_SUMMARY
+          echo '<a href="${{ steps.deployment.outputs.page_url }}test-results/report.html" target="_blank">Test results report</a>' >> $GITHUB_STEP_SUMMARY
+          echo '<a href="${{ steps.deployment.outputs.page_url }}code-coverage/report.html" target="_blank">Code coverage report</a>' >> $GITHUB_STEP_SUMMARY
